// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Example /> renders a JSON example 1`] = `
<div
  className="body-content-example"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="action-buttons"
  >
    <CopyButton
      onCopyClick={[Function]}
      tooltip="Copy to Clipboard"
    />
    <span
      onClick={[Function]}
    >
      Expand All
    </span>
    <span
      onClick={[Function]}
    >
      Collapse All
    </span>
  </div>
  <t
    collapsed={false}
    displayDataTypes={false}
    displayObjectSize={false}
    enableClipboard={false}
    src={
      Object {
        "message": "hi",
      }
    }
    theme="chalk"
  />
</div>
`;

exports[`<Example /> renders a string example 1`] = `
<div
  className="body-content-example"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="action-buttons"
  >
    <CopyButton
      onCopyClick={[Function]}
      tooltip="Copy to Clipboard"
    />
    <span
      onClick={[Function]}
    >
      Expand All
    </span>
    <span
      onClick={[Function]}
    >
      Collapse All
    </span>
  </div>
  Object {
    "example": "<message>hi</message>",
  }
</div>
`;
